--- a/Epsiode - 1/index.css
+++ b/Epsiode - 1/index.css
@@ -1,3 +1,44 @@
-#heading {
-  color: red;
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid black;
+}
+
+.logo {
+  width: 140px;
+}
+
+.nav-items > ul {
+  display: flex;
+  list-style-type: none;
+  font-size: 24px;
+}
+
+.nav-items > ul > li {
+  padding: 10px;
+  margin: 10px;
+}
+
+.rest-card {
+  width: 200px;
+  padding: 5px;
+  margin: 5px;
+}
+
+.rest-card:hover {
+  border: 1px solid black;
+  cursor: pointer;
+}
+
+.search-bar {
+  padding: 20px;
+}
+
+.rest-logo {
+  width: 100%;
+}
+
+.rest-container {
+  display: flex;
+  flex-wrap: wrap;
 }
