--- a/React JS Basics/index.css
+++ b/React JS Basics/index.css
@@ -48,3 +48,23 @@
   padding: 10px;
   cursor: pointer;
 }
+
+.shimmer-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.shimmmer-card {
+  margin: 40px;
+  width: 200px;
+  height: 400px;
+  background-color: #f0f0f0;
+}
+
+.login {
+  padding: 0 20px;
+}
+
+.search-button {
+  cursor: pointer;
+}
