--- a/React JS Basics/index.css
+++ b/React JS Basics/index.css
@@ -1,75 +1,1 @@
-.header-container {
-  display: flex;
-  justify-content: space-between;
-  border: 1px solid black;
-}
-
-.logo {
-  width: 140px;
-}
-
-.nav-items > ul {
-  display: flex;
-  list-style-type: none;
-  font-size: 24px;
-}
-
-.nav-items > ul > li {
-  padding: 10px;
-  margin: 10px;
-}
-
-.rest-card {
-  width: 200px;
-  padding: 5px;
-  margin: 5px;
-}
-
-.rest-card:hover {
-  border: 1px solid black;
-  cursor: pointer;
-}
-
-.search-bar {
-  padding: 20px;
-}
-
-.rest-logo {
-  width: 100%;
-}
-
-.rest-container {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.filter-btn {
-  margin: 10px;
-  padding: 10px;
-  cursor: pointer;
-}
-
-.shimmer-container {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.shimmmer-card {
-  margin: 40px;
-  width: 200px;
-  height: 400px;
-  background-color: #f0f0f0;
-}
-
-.login {
-  padding: 0 20px;
-}
-
-.search-button {
-  cursor: pointer;
-}
-
-.user-card {
-  border: solid 1px black;
-  padding: 10px;
-}
+@import "tailwindcss";
